add some projects details

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         margin: 0;
         padding: 0;
         font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        
+
     }
     div {
         width: 600px;
@@ -42,13 +42,13 @@
             width: auto;
         }
     }
-    </style>    
+    </style>
 </head>
 
 <body>
 <div>
     <h1>turret.'s website</h1>
-    <p>Hello! There isn't much information available here. If you wanna learn more 
+    <p>Hello! There isn't much information available here. If you wanna learn more
     about me, why don't you contact me?</p>
     <h4>socials & contacts</h4>
     <p>
@@ -56,6 +56,11 @@
     <a href="mailto:turret@duck.com"><img src="https://duckduckgo.com/favicon.ico"> - turret@duck.com (misc)</a><br>
     <a href="https://github.com/turret-dev"><img src="https://github.com/favicon.ico"> - turret-dev</a><br>
     <a href="https://gitlab.com/turret3"><img src="https://gitlab.com/favicon.ico"> - turret3</a><br>
+    </p>
+    <h4>projects</h4>
+    <p>
+    <a href="https://git.turret.cyou/portage-overlay.git/about/"><img src="https://gentoo.org/favicon.ico"> - turret.'s gentoo portage overlay</a><br>
+    <a href="https://git.turret.cyou/progs/donut.git/about/"><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpurepng.com%2Fpublic%2Fuploads%2Flarge%2Fpurepng.com-donutfood-dessert-donut-doughnut-fat-941524635175i5xtv.png&f=1&nofb=1&ipt=69f160a069f7306c5d1629e447857bfd08032a36638b2a91581a2510eed0a2cc&ipo=images"> - x11 spinning donut (boredom project)</a><br>
     </p>
     <h4>links & services</h4>
     <p>
